[gd_scene load_steps=10 format=3 uid="uid://bviaos5j2kcs"]

[ext_resource type="Script" uid="uid://c1dk07nfjm8oc" path="res://scene/Node2D/entity/entity.gd" id="1_5nauw"]
[ext_resource type="Texture2D" uid="uid://c4pv2aleur70d" path="res://texture/main/entity.png" id="2_exvpm"]
[ext_resource type="PackedScene" uid="uid://bh0vpfp41tpj2" path="res://scene/Gun/gun.tscn" id="3_lsagb"]
[ext_resource type="Texture2D" uid="uid://8xfw0wnfsxrc" path="res://texture/main/entity_thumbnail.svg" id="4_a17nd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_exvpm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exvpm"]
size = Vector2(128, 128)

[sub_resource type="Animation" id="Animation_exvpm"]
resource_name = "sprint"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.02, 0.04, 0.06, 0.08, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"add_sprint_ghost"
}, {
"args": [],
"method": &"add_sprint_ghost"
}, {
"args": [],
"method": &"add_sprint_ghost"
}, {
"args": [],
"method": &"add_sprint_ghost"
}, {
"args": [],
"method": &"add_sprint_ghost"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsagb"]
_data = {
&"sprint": SubResource("Animation_exvpm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsagb"]

[node name="Entity" type="CharacterBody2D" node_paths=PackedStringArray("heal_timer", "audio_stream_player", "injury_area", "sprite", "rays", "view", "name_label", "animation", "camera", "sprint_cd_timer", "sprint_timer", "gun", "direction_line")]
visibility_layer = 3
motion_mode = 1
floor_block_on_wall = false
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_5nauw")
heal_timer = NodePath("heal")
audio_stream_player = NodePath("AudioStreamPlayer")
injury_area = NodePath("Sprite2D/Area2D")
sprite = NodePath("Sprite2D")
rays = NodePath("Rays")
view = NodePath("View")
name_label = NodePath("Name")
animation = NodePath("AnimationPlayer")
camera = NodePath("Camera2D")
sprint_cd_timer = NodePath("Sprint_CD")
sprint_timer = NodePath("Sprint")
gun = NodePath("Gun")
direction_line = NodePath("thumbnail/ColorRect")

[node name="thumbnail" type="Sprite2D" parent="."]
visibility_layer = 2
scale = Vector2(2, 2)
texture = ExtResource("4_a17nd")

[node name="ColorRect" type="ColorRect" parent="thumbnail"]
visible = false
visibility_layer = 3
offset_left = -3.0
offset_top = -20.0
offset_right = 19997.0
offset_bottom = 20.0
pivot_offset = Vector2(3, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_exvpm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_exvpm")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
shape = SubResource("RectangleShape2D_exvpm")

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Sprint_CD" type="Timer" parent="."]
one_shot = true

[node name="Sprint" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lsagb")
}

[node name="Gun" parent="." node_paths=PackedStringArray("host") instance=ExtResource("3_lsagb")]
position = Vector2(32, 17)
scale = Vector2(2, 2)
host = NodePath("..")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = 10.0
max_polyphony = 10

[node name="Rays" type="Node2D" parent="."]

[node name="View" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource("RectangleShape2D_lsagb")
debug_color = Color(0, 0.60038817, 0.70000815, 0)

[node name="heal" type="Timer" parent="."]
one_shot = true

[node name="Name" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.275)
offset_left = -97.0
offset_top = -177.0
offset_right = 95.0
offset_bottom = -81.0
theme_override_font_sizes/font_size = 70
text = "name"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Sprint" to="." method="_on_sprint_timeout"]
[connection signal="area_entered" from="View" to="." method="_on_view_area_entered_or_exited"]
[connection signal="area_exited" from="View" to="." method="_on_view_area_entered_or_exited" binds= [false]]
[connection signal="timeout" from="heal" to="." method="_on_heal_timeout"]
